--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "PostgresConnection": "Host=ep-late-bush-a8a0h44x-pooler.eastus2.azure.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_NjldFm4qtA9K"
+    "PostgresConnection": ""
   }
 }
